# stock-analysis

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  setup.py
.streamlit/: config.toml  secrets.toml
docs/: APPLICATION_INTERFACE.md  ARCHITECTURE.md  BACKTESTING_FRAMEWORK.md  DATABASE_SCHEMA.md  DATA_INGESTION.md  FEATURE_ENGINEERING.md  INDICATOR_CATALOG.md  ML_MODELS.md  OUTPUT_FORMAT.md  PIPELINE_PSEUDOCODE.md  PROBABILITY_ENGINE.md  SCORING_FRAMEWORK.md
src/stock_analysis/: __init__.py
src/stock_analysis/cli/: __init__.py  main.py
src/stock_analysis/core/: __init__.py  config.py  exceptions.py  logging.py
src/stock_analysis/data/: __init__.py  cache.py  models.py  provider.py  storage.py  universe.py
src/stock_analysis/features/: __init__.py  engineer.py  transforms.py
src/stock_analysis/gui/: __init__.py  app.py  run.py
src/stock_analysis/indicators/: __init__.py  engine.py  momentum.py  patterns.py  regime.py  registry.py  relative.py  structure.py  trend.py  volatility.py  volume.py
src/stock_analysis/ml/: __init__.py  data_builder.py  engine.py  model_storage.py  models.py
src/stock_analysis/output/: __init__.py  formatters.py
src/stock_analysis/probability/: __init__.py  engine.py  estimators.py
src/stock_analysis/scoring/: __init__.py  components.py  scorer.py
